@@ -174,6 +174,8 @@ Bug fixes:
 - PR#6944: let module X = Path in … is not typed as a module alias
   (Jacques Garrigue, report by def)
 - PR#6982: unexpected type error when packing a module alias
+- PR#6985: `module type of struct include Bar end exposes
+           %s#row when Bar contains private row types
 - GPR#205: Clear caml_backtrace_last_exn before registering as root (report
   and fix by Frederic Bour)
 - GPR#220: minor -dsource error on recursive modules
